--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
+    "gh-pages": "^3.2.3",
+    "pnotify": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pnotify": "0.0.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
