--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pnotify": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-pnotify": "0.0.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
